Fix for bug 318235: Ctrl+Enter being treated as Ctrl+J when captured by a Javascript event Patch by Rob Arnold (tellrob@gmail.com) r=vlad sr=roc